--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -5,13 +5,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 20;
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, .5);
 
     .inner {
-        width: 10rem;
+        width: 11.2rem;
         background-color: #fff;
         .m-header {
             height: 1.52rem;
@@ -24,6 +24,31 @@
 
         .content-wrapper {
             padding: 0.6rem;
+        }
+
+        .topic {
+            font-size: 0.56rem;
+            margin-bottom: 0.4rem;
+            .check-box {
+                width: 0.56rem;
+                height: 0.56rem;
+                vertical-align: -0.08rem;
+            }
+        }
+
+        .confirm-btn {
+            width: 100%;
+            margin-top: 1.6rem;
+        }
+
+        .text-area {
+            display: block;
+            width: 100%;
+            min-height: 3rem;
+            border: 1px solid #ddd;
+            padding: 0.2rem;
+            margin-top: 0.28rem;
+            font-size: 0.56rem;
         }
     }
 }
