--- a/src/components/AddInput/index.scss
+++ b/src/components/AddInput/index.scss
@@ -1,11 +1,11 @@
 .input-wrapper {
     position: fixed;
-    top: 1.76rem;
+    top: 1.6rem;
     left: 0;
     display: flex;
     width: 100%;
-    height: 1.52rem;
-    padding: 0.16rem 0.4rem;
+    height: 1.68rem;
+    padding: 0.32rem 0.4rem 0.16rem;
     box-sizing: border-box;
     border-bottom: 1px solid #ddd;
     background-color: #fff;
