--- a/src/assets/style/ui.css
+++ b/src/assets/style/ui.css
@@ -4,6 +4,14 @@
     color: #fff;
     font-size: 0.56rem;
     padding: 0 0.4rem;
+    border-radius: 0.16rem;
+    cursor: pointer;
+}
+
+.btn.btn-default {
+    background-color: #fff;
+    color: #333;
+    border-color: #ccc;
 }
 
 .btn.btn-primary {
