--- a/src/components/Toast/index.scss
+++ b/src/components/Toast/index.scss
@@ -5,14 +5,13 @@
     right: 0;
     margin: 0 auto;
     z-index: 30;
-    width: 160px;
-    padding: 20px 8px;
-    border-radius: 5px;
+    width: 6.4rem;
+    padding: 0.8rem 0.32rem;
+    border-radius: 0.2rem;
     z-index: 101;
     background-color: rgba(0,0,0, .4);
     color: #fff;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.56rem;
+    line-height: 0.8rem;
     text-align: center;
-    transition: all .3s;
 }
