--- a/src/components/AddInput/index.scss
+++ b/src/components/AddInput/index.scss
@@ -10,7 +10,8 @@
     border-bottom: 1px solid #ddd;
     background-color: #fff;
     z-index: 9;
-
+    opacity: 0;
+    transform: translateY(-100%);
     input {
         flex: 1;
         display: block;
@@ -24,4 +25,32 @@
     button {
         margin-left: 0.4rem;
     }
+}
+
+.slide-enter {
+    opacity: 0;
+    transform: translateY(-100%);
+}
+.slide-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all .3s ease;
+}
+.slide-enter-done {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.slide-exit {
+    opacity: 1;
+    transform: translateY(0);
+}
+.slide-exit-active {
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: all .3s ease;
+}
+.slide-exit-done {
+    opacity: 0;
+    transform: translateY(-100%);
 }
