--- a/src/components/TodoItem/index.scss
+++ b/src/components/TodoItem/index.scss
@@ -1,9 +1,15 @@
 .todo-item {
+    overflow: hidden;
+    width: 100%;
+    .wrapper {
     display: flex;
-    height: 2rem;
+    width: 100%;
+    height: 2.8rem;
     align-items: center;
     border-bottom: 0.04rem solid #ddd;
     padding: 0.4rem 0.32rem;
+    box-sizing: border-box;
+    }
     .check-box {
         margin: 0 0.4rem;
         input {
@@ -17,7 +23,7 @@
         position: relative;
         flex: 1;
         font-size: 0.64rem;
-        line-height: 0.64rem;
+        line-height: 1.2rem;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -33,7 +39,7 @@
         .line {
             position: absolute;
             left: 0;
-            top: 0.30rem;
+            top: 0.6rem;
             width: 0;
             height: 0.06rem;
             background-color: #adadad;
