--- a/src/components/Checkbox/index.scss
+++ b/src/components/Checkbox/index.scss
@@ -12,7 +12,7 @@
             & + .my-checkbox{
                 background: #5cb85c;
                 border-color: #5cb85c;
-                animation: wave 0.4s ease;
+                // animation: wave 0.4s ease;
                 .svg {
                     stroke-dashoffset: 0;
                 }
@@ -33,7 +33,7 @@
         transition: all 0.2s ease;
         box-sizing: border-box;
         &:hover {
-            border-color: #5cb85c;
+            // border-color: #5cb85c;
         }
         .svg {
             width: 0.48rem;
