--- a/src/components/Toast/index.scss
+++ b/src/components/Toast/index.scss
@@ -1,10 +1,9 @@
 .toast {
     position: fixed;
-    top: 12rem;
+    top: 50%;
     left: 0;
     right: 0;
-    margin: 0 auto;
-    z-index: 30;
+    margin: -1.2rem auto 0;
     width: 6.4rem;
     padding: 0.8rem 0.32rem;
     border-radius: 0.2rem;
