--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 1.6rem;
     background-color: #46b8da;
     color: #fff;
