--- a/src/components/TodoItem/index.scss
+++ b/src/components/TodoItem/index.scss
@@ -10,6 +10,9 @@
         padding: 0.4rem 0.32rem;
         box-sizing: border-box;
     }
+    // &:last-of-type .wrapper {
+    //     border-bottom: 0;
+    // }
     .check-box {
         margin: 0 0.4rem;
         input {
