--- a/src/components/Checkbox/index.scss
+++ b/src/components/Checkbox/index.scss
@@ -1,10 +1,8 @@
 .my-checkbox-wrapper {
-    position: relative;
-    display: inline-block;
-    width: 0.56rem;
+    display: inline-flex;
     height: 0.56rem;
     cursor: pointer;
-    vertical-align: text-bottom;
+    vertical-align: text-top;
     .input-checkbox {
         margin: 0;
         display: none;
@@ -15,19 +13,14 @@
                 // animation: wave 0.4s ease;
                 .svg {
                     stroke-dashoffset: 0;
+                    margin-top: .04rem;
                 }
             }
         }
     }
     .my-checkbox {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        width: .56rem;
+        height: .56rem;
         border-radius: 0.08rem;
         border: 0.04rem solid #c8ccd4;
         transition: all 0.2s ease;
@@ -50,9 +43,8 @@
         }
     }
     .text {
-        position: absolute;
-        top: 0px;
-        left: 0.8rem;
+        flex-shrink: 0;
+        margin-left: 0.2rem;
         font-size: 0.56rem;
         line-height: .56rem;
     }
